--- a/src/main/resources/fxml/PvsPage.fxml
+++ b/src/main/resources/fxml/PvsPage.fxml
@@ -168,14 +168,21 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" percentHeight="6.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="6.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" percentHeight="77.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" percentHeight="7.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ScrollPane fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" rotate="180.0" GridPane.rowIndex="2">
+            <ScrollPane fx:id="messageScrollPane" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" rotate="180.0" vbarPolicy="ALWAYS" GridPane.rowIndex="3">
                <content>
-                  <VBox fx:id="reverseVboxForSendMessage" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="729.0" prefWidth="610.0" spacing="25.0" style="-fx-background-color: #013dc4;" />
+                  <VBox fx:id="reverseVboxForSendMessage" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="729.0" prefWidth="610.0" spacing="10.0" style="-fx-background-color: #013dc4;">
+                     <padding>
+                        <Insets bottom="10.0" />
+                     </padding></VBox>
                </content>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
             </ScrollPane>
             <GridPane style="-fx-background-color: #ffb703;">
               <columnConstraints>
@@ -242,7 +249,8 @@
                   </GridPane>
                   <GridPane GridPane.columnIndex="3">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
@@ -251,7 +259,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="3">
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="4">
                            <children>
                               <ImageView fx:id="zarebbin" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#visibleSearchInPv" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -263,7 +271,7 @@
                               </ImageView>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="3">
                            <children>
                               <ImageView fx:id="block" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#BlockUser" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -275,7 +283,7 @@
                               </ImageView>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
                            <children>
                               <ImageView fitHeight="40.0" fitWidth="40.0" onMouseClicked="#VisitPage" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -287,11 +295,23 @@
                               </ImageView>
                            </children>
                         </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                           <children>
+                              <ImageView fx:id="arrow" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#newMessageOrDown" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+                                 <image>
+                                    <Image url="@../images/arrow_down.png" />
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
+                              </ImageView>
+                           </children>
+                        </HBox>
                      </children>
                   </GridPane>
                </children>
             </GridPane>
-            <GridPane fx:id="messageGridPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" style="-fx-background-color: #ffb703;" GridPane.rowIndex="3">
+            <GridPane fx:id="messageGridPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" style="-fx-background-color: #ffb703;" GridPane.rowIndex="4">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="80.0" prefWidth="100.0" />
@@ -299,7 +319,6 @@
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" percentHeight="100.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" percentHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
@@ -323,9 +342,9 @@
                         </ImageView>
                      </children>
                   </HBox>
-                  <VBox GridPane.columnIndex="1">
+                  <VBox alignment="TOP_CENTER" minWidth="0.0" GridPane.columnIndex="1">
                      <children>
-                        <TextArea fx:id="messageTextArea" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="500.0" wrapText="true">
+                        <TextArea fx:id="messageTextArea" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="40.0" prefWidth="500.0" wrapText="true">
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets>
@@ -339,7 +358,7 @@
             </GridPane>
             <GridPane fx:id="searchInPvGridPane" style="-fx-background-color: #00a8e8;" GridPane.rowIndex="1">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.20001220703125" minWidth="10.0" percentWidth="15.0" prefWidth="104.59998321533203" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.20001220703125" minWidth="10.0" percentWidth="16.0" prefWidth="104.59998321533203" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.40001678466797" minWidth="10.0" percentWidth="85.0" prefWidth="341.40001678466797" />
                </columnConstraints>
                <rowConstraints>
@@ -359,14 +378,14 @@
                               <Insets left="7.0" />
                            </HBox.margin>
                         </ImageView>
-                        <Label fx:id="searchIndex" prefHeight="18.0" prefWidth="18.0" text="(0)">
+                        <Label fx:id="searchIndex" prefHeight="18.0" prefWidth="36.0" text="(0)">
                            <HBox.margin>
                               <Insets left="5.0" />
                            </HBox.margin>
                         </Label>
                         <VBox alignment="CENTER" prefHeight="30.0" prefWidth="18.0">
                            <children>
-                              <ImageView fx:id="nextSearchIndex" fitHeight="15.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+                              <ImageView fitHeight="15.0" fitWidth="18.0" onMouseClicked="#nextSearchIndex" pickOnBounds="true" preserveRatio="true" rotate="90.0">
                                  <image>
                                     <Image url="@../images/arrowhead_left.png" />
                                  </image>
@@ -374,7 +393,7 @@
                                     <Cursor fx:constant="HAND" />
                                  </cursor>
                               </ImageView>
-                              <ImageView fx:id="backIndexSearch" fitHeight="15.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="15.0" fitWidth="16.0" onMouseClicked="#backIndexSearch" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/arrowhead_down.png" />
                                  </image>
@@ -384,14 +403,57 @@
                               </ImageView>
                            </children>
                         </VBox>
-                        <Label fx:id="searchTotalFind" prefHeight="18.0" prefWidth="16.0" text="(0)" />
+                        <Label fx:id="searchTotalFind" prefHeight="18.0" prefWidth="45.0" text="(0)" textAlignment="CENTER" />
                      </children>
                   </HBox>
-                  <TextField fx:id="searchInPvTextField" prefHeight="26.0" prefWidth="213.0" promptText="Search Id" style="-fx-background-color: #007ea7;" GridPane.columnIndex="1">
+                  <TextField fx:id="searchInPvTextField" prefHeight="26.0" prefWidth="213.0" promptText="Search" style="-fx-background-color: #007ea7;" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </TextField>
+               </children>
+            </GridPane>
+            <GridPane fx:id="editReplyGridPane" style="-fx-background-color: #00a8e8;" GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="23.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="12.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
+                     <children>
+                        <ImageView fitHeight="32.0" fitWidth="37.0" onMouseClicked="#closeEditReply" pickOnBounds="true" preserveRatio="true" rotate="45.0">
+                           <image>
+                              <Image url="@../images/add.png" />
+                           </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </ImageView>
+                     </children>
+                  </HBox>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Label fx:id="formatEditReply" alignment="CENTER" contentDisplay="CENTER" prefHeight="14.0" prefWidth="258.0" text="FORMAT" textAlignment="CENTER">
+                           <font>
+                              <Font name="Bell MT" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="whoEditReply" alignment="CENTER" prefHeight="18.0" prefWidth="214.0" text="WHO?" />
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+                     <children>
+                        <Label fx:id="contentEditReply" prefHeight="22.0" prefWidth="558.0" text="CONTENT">
+                           <font>
+                              <Font name="Bell MT" size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
                </children>
             </GridPane>
          </children>
