--- a/src/main/resources/fxml/AnotherMessageBoxInGroup.fxml
+++ b/src/main/resources/fxml/AnotherMessageBoxInGroup.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <GridPane fx:id="total" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="85.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.GroupControllers.AnotherMessageBoxInGroupController">
@@ -36,11 +37,12 @@
                   </columnConstraints>
                   <rowConstraints>
                       <RowConstraints minHeight="10.0" percentHeight="23.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" percentHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" percentHeight="64.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" percentHeight="13.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   </rowConstraints>
                   <children>
-                      <HBox alignment="CENTER_RIGHT" maxHeight="30.0" minHeight="13.6" prefHeight="13.6" prefWidth="200.0" spacing="35.0" GridPane.rowIndex="2">
+                      <HBox alignment="CENTER_RIGHT" maxHeight="30.0" minHeight="13.6" prefHeight="13.6" prefWidth="200.0" spacing="35.0" GridPane.rowIndex="3">
                           <children>
                               <Label fx:id="edited" text="Edited">
                                   <font>
@@ -60,7 +62,7 @@
                               <Insets />
                           </opaqueInsets>
                       </HBox>
-                      <TextArea fx:id="ContentTextArea" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="54.0" prefWidth="241.0" style="-fx-background-color: #000437; -fx-border-color: Red;" text="&#10;" wrapText="true" GridPane.rowIndex="1">
+                      <TextArea fx:id="ContentTextArea" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="54.0" prefWidth="241.0" style="-fx-background-color: #000437; -fx-border-color: Red;" text="&#10;" wrapText="true" GridPane.rowIndex="2">
                           <font>
                               <Font name="Bell MT" size="20.0" />
                           </font>
@@ -88,7 +90,7 @@
                           <children>
                         <Label fx:id="sender" prefHeight="0.0" prefWidth="238.0" text="Label ">
                            <font>
-                              <Font name="Bell MT Bold" size="13.0" />
+                              <Font name="Bell MT Bold" size="11.0" />
                            </font>
                            <padding>
                               <Insets left="10.0" />
@@ -114,6 +116,11 @@
                               </VBox>
                           </children>
                       </GridPane>
+                  <HBox fx:id="visiblePhoto" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+                     <children>
+                        <Rectangle fx:id="photoPlace" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" stroke="BLACK" strokeType="INSIDE" />
+                     </children>
+                  </HBox>
                   </children>
               </GridPane>
             <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="200.0">
