--- a/src/main/resources/fxml/GroupPage.fxml
+++ b/src/main/resources/fxml/GroupPage.fxml
@@ -324,10 +324,13 @@
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <ImageView fitHeight="41.0" fitWidth="83.0" onMouseClicked="#selectPhotoMessage" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="photoDisplay" fitHeight="41.0" fitWidth="83.0" onMouseClicked="#selectPhotoMessage" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/clip2.png" />
                            </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </ImageView>
                      </children>
                   </HBox>
